--- a/LibrarrySystem/Views/Shared/_Layout.cshtml
+++ b/LibrarrySystem/Views/Shared/_Layout.cshtml
@@ -58,7 +58,7 @@
             <div class="header">
                 <div class="row">
                     <div class="col-sm-6">
-                        <a>DASHBOARD</a>
+                        <a>@TempData["HeaderTitle"]</a>
                     </div>
                     <div class="col-sm-6 d-flex justify-content-end">
                         <a asp-action="Login" asp-controller="Maintenance">LOGOUT</a>
